Bug 436365 - Offline update page shouldn't display "Uninstall" button and rating
Summary: Offline update page shouldn't display "Uninstall" button and rating
Status: RESOLVED FIXED
Alias: None
Product: Discover
Classification: Applications
Component: Updates (offline) (other bugs)
Version First Reported In: 5.21.4
Platform: Neon Linux
: HI normal
Target Milestone: ---
Assignee: Dan Leinir Turthra Jensen
URL:
Keywords: usability
Depends on:
Blocks:
 
Reported: 2021-04-29 15:29 UTC by Ilya Bizyaev
Modified: 2021-05-06 14:51 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 5.22
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Ilya Bizyaev 2021-04-29 15:29:13 UTC
SUMMARY
Offline updates currently have a page that displays a list of packages in it. It offers an "Update" button and a rating, which seem irrelevant/misleading.


STEPS TO REPRODUCE
1. Open Discover's Updates section
2. Click the offline update item


EXPECTED RESULT
A page without these bits


SOFTWARE/OS VERSIONS
I don't use KDE Neon myself, but that's where the problem can be reproduced
Comment 1 Aleix Pol 2021-05-06 10:38:03 UTC
Git commit 64af959eca913bddab0e872bc6e38270964333e8 by Aleix Pol.
Committed on 06/05/2021 at 10:36.
Pushed by apol into branch 'master'.

Don't show the uninstall button when it's noop

This applies to ostree and fwupd resources as well as packagekit's
system update mock one.

M  +1    -0    discover/qml/InstallApplicationButton.qml
M  +4    -0    libdiscover/backends/FwupdBackend/FwupdResource.h
M  +4    -0    libdiscover/backends/PackageKitBackend/PackageKitUpdater.cpp
M  +5    -1    libdiscover/backends/RpmOstreeBackend/RpmOstreeResource.h
M  +9    -0    libdiscover/resources/AbstractResource.h

https://invent.kde.org/plasma/discover/commit/64af959eca913bddab0e872bc6e38270964333e8