Don't show the uninstall button when it's noop

This applies to ostree and fwupd resources as well as packagekit's
system update mock one.

BUG: 436365